<resources>
    <string name="app_name">Wise Optimise</string>
    <string name="optimise">Optimise</string>
    <string name="todo">TODO</string>
    <string name="battery_info">Battery Info</string>
    <string name="app_usage">App Usage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">User Name</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>


    <string name="sync_frequency_title">Sync Frequency</string>
    <string name="notification_title">Notifications</string>

    <string name="display_header">Display</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="font_size_title">Font Size</string>
    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <!-- label for usage time -->
    <string name="usage_time_label">Usage time</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="slogan">Maximize Battery Life, Optimize Performance.</string>
    <string name="signature_hint">signature_hint</string>
    <string name="notifications_title">notifications_title\n</string>
</resources>
