<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="notification"
            app:title="@string/notification_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

        <ListPreference
            app:defaultValue="daily"
            app:entries="@array/sync_frequency_entries"
            app:entryValues="@array/sync_frequency_values"
            app:key="sync_frequency"
            app:title="@string/sync_frequency_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_header">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="small"
            app:entries="@array/font_size_entries"
            app:entryValues="@array/font_size_values"
            app:key="font_size"
            app:title="@string/font_size_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
